<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Rezerwacja wizyt bezpośrednich</string>
    <string name="username">Nazwa użytkownika</string>
    <string name="enter_username">Wprowadź nazwę użytkownika</string>
    <string name="password">Hasło</string>
    <string name="enter_password">Wprowadź hasło</string>
    <string name="email">E-mail</string>
    <string name="enter_email">Wprowadź e-mail</string>
    <string name="firstname">Imię</string>
    <string name="enter_firstname">Wprowadź imię</string>
    <string name="lastname">Nazwisko</string>
    <string name="enter_lastname">Wprowadź nazwisko</string>
    <string name="register_user">Zarejestruj się</string>
    <string name="login">Zaloguj się</string>
    <string name="already_registered_n_click_here_to_login">Już zarejestrowany? \n Kliknij tutaj, aby się zalogować</string>
    <string name="user_name">NAZWA UŻYTKOWNIKA</string>
    <string name="user_email">E-MAIL UŻYTKOWNIKA</string>
    <string name="settings">Ustawienia</string>
    <string name="logout">Wyloguj</string>
    <string name="heading">Heading</string>
    <string name="description">Description</string>
    <string name="imagedesc">imageDesc</string>
    <string name="categories">Kategorie</string>
    <string name="city">Miasto</string>
    <string name="sub_services_list">Lista podusług</string>
    <string name="contact">Dane kontaktowe</string>
    <string name="service_description">Opis usługi</string>
    <string name="provider">Usługodawca</string>
    <string name="service_name">Nazwa usługi</string>
    <string name="email2">Email:</string>
    <string name="phone">Tel.:</string>
    <string name="choose">Wybierz</string>
    <string name="show_on_map">Pokaż na mapie</string>
    <string name="sub_service_name">Nazwa podusługi</string>
    <string name="sub_service_description">Opis podusługi</string>
    <string name="price">Cena</string>
    <string name="duration">Czas trwania</string>
    <string name="book">Zarezerwuj</string>
    <string name="provider_name">Nazwa usługodawcy</string>
    <string name="services_list">Lista usług</string>
    <string name="loading_data">Ładowanie danych…</string>
    <string name="turn_on_gps">Włącz GPS</string>
    <string name="turn_on">Włącz</string>
    <string name="cancel">Anuluj</string>
    <string name="please_wait">Proszę czekać…</string>
    <string name="registering">Rejestracja użytkownika</string>
    <string name="providers">Usługodawcy</string>
    <string name="work_time">Czas pracy</string>
    <string name="enter_phone_number">Wprowadź numer telefonu</string>
    <string name="date_time">Data i godzina</string>
    <string name="book_appointment">Zarezerwuj usługę</string>
    <string name="phone_number">Numer telefonu</string>
    <string name="select_date_time">Wybierz datę i godzinę</string>
    <string name="select_city">Wybierz miasto</string>
    <string name="reservation_number">Numer rezerwacji</string>
    <string name="enter_reservation_number">Wprowadź numer rezerwacji</string>
    <string name="search_reservation">Wyszukaj usługę</string>
    <string name="realised">Zrealizowana</string>
    <string name="cancelled">Anulowana</string>
    <string name="cancel_service">Odwołaj</string>
    <string name="search_reserved_service">Wyszukaj zarezerwowaną usługę</string>
    <string name="no">Nie</string>
    <string name="yes">Tak</string>
    <string name="logging">Logowanie</string>
    <string name="you_clicked_settings">Kliknąłeś ustawienia</string>
    <string name="providers_list">Lista usługodawców</string>
    <string name="no_selected_providers">Brak wybranego usługodawcy w aktualnym mieście</string>
    <string name="invalid_email">Nieprawidłowy e-mail</string>
    <string name="service_reservation">Rezerwacja usługi</string>
    <string name="choose_day">Wybierz dzień</string>
    <string name="choose_hour">Wybierz godzinę</string>
    <string name="excluding_date">Czy chcesz wykluczyć jakiś dzień lub godzinę?</string>
    <string name="excluding_all_day">Czy wykluczony ma być cały dzień?</string>
    <string name="excluding_next_date">Czy chcesz wykluczyć kolejny dzień lub godzinę?</string>
    <string name="exclude_date">Wyklucz termin</string>
    <string name="exclude_start_time">Wyklucz początkową godzinę</string>
    <string name="exclude_end_time">Wyklucz końcową godzinę</string>
    <string name="invalid_phone_number">Nieprawidłowy numer telefonu</string>
    <string name="booking">Rezerwowanie</string>
    <string name="number_of_reservation">\" - numer rezerwacji: \"</string>
    <string name="searching_service">Wyszukiwanie zarezerwowanej usługi</string>
    <string name="canceling">Anulowanie</string>
    <string name="searching">Wyszukiwanie</string>
    <string name="service_list">Lista usług</string>
    <string name="no_selected_service">Brak wybranej usługi w aktualnym mieście</string>
    <string name="no_free_date">Brak wolnych terminów w tym dniu</string>
    <string name="generate_date_time">Wygeneruj termin automatycznie</string>
    <string name="save">Zapisz</string>
    <string name="change_password">Zmiana hasła</string>
    <string name="old_password">Stare hasło</string>
    <string name="new_password" tools:ignore="Typos">Nowe hasło</string>
    <string name="saving">Zapisywanie</string>
    <string name="your_reservations">Twoje rezerwacje</string>
    <string name="go_home">Start</string>
    <string name="add">Dodaj</string>
    <string name="address" tools:ignore="Typos">Adres</string>
    <string name="address2" tools:ignore="Typos">Adres:</string>
    <string name="add_city">Dodaj miasto</string>
    <string name="category">Kategoria</string>
    <string name="add_category">Dodaj kategorię</string>
    <string name="adding_service">Dodawanie uslugi</string>
    <string name="edit">Edytuj</string>
    <string name="delete">Usuń</string>
    <string name="delete_confirm">Czy chcesz usunąć usługę?</string>
    <string name="save_working_time">Zapisz czas pracy</string>
    <string name="edit_working_time">Edytuj czas pracy</string>
    <string name="save_service">Zapisz usługę</string>
    <string name="start_work">Początek pracy</string>
    <string name="end_work">Koniec pracy</string>
    <string name="zloty">zł</string>
    <string name="min">min</string>
    <string name="adding_sub_serrice">Dodawanie podusługi</string>
    <string name="calendar">Kalendarz</string>
    <string name="statistics">Statystyki</string>
    <string name="holiday">Urlopy</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="address_not_found">Nie znaleziono adresu</string>
    <string name="clients_count">Liczba klientów</string>
    <string name="new_clients">Nowi:</string>
    <string name="old_clients">Powracający:</string>
    <string name="most_popular_hours">Najpopularniejsze godziny</string>
    <string name="count">- Liczba:</string>
    <string name="most_popular_services">Najpopularniejsze usługi</string>
    <string name="most_popular_sub_services">Najpopularniejsze podusługi</string>
    <string name="most_profitable_services">Najbardziej dochodowe usługi</string>
    <string name="sum">- Suma:</string>
    <string name="most_profitable_sub_services">Najpopularniejsze podusługi</string>
    <string name="count_reservations">Liczba rezerwacji</string>
    <string name="realised_services">Zrealizowane:</string>
    <string name="unrealised_services">Niezrealizowane:</string>
    <string name="canceled_services">Odwołane:</string>
    <string name="aboutAuthorLbl" tools:ignore="Typos">Autor</string>
    <string name="aboutAuthorVal">Grzegorz Dziugieł\nWydział Informatyki i Telekomunikacji\nPolitechnika Poznańska</string>
    <string name="aboutApplicationLbl">O aplikacji</string>
    <string name="aboutApplicationVal">Apliakcja jest praca magisterską.\nAplikacja umożliwia rezerwację terminu usługi bezpośredniej.</string>
    <string name="all_day">Cały dzień</string>
    <string name="start">Początek</string>
    <string name="end">Koniec</string>
    <string name="add_free_day">Dodaj dzień wolny</string>
    <string name="free_days">Dni wolne</string>
    <string name="date">data</string>
    <string name="choose_service">Wybierz uslugę</string>
    <string name="rating">Ocena</string>
    <string name="rate_service">Oceń usługę</string>
    <string name="ratings">Oceny</string>
    <string name="ratings_avg">Średnia ocen</string>
    <string name="booked_service">Zarezerwowano usługę</string>
    <string name="canceled_service">Odwołano usługę</string>
    <string name="message_from_provider">Wiadomość od usługodawcy</string>
    <string name="send_message_to_customer">Wyślij wiadomość do klienta</string>
    <string name="send">Wyślij</string>
    <string name="no_message">Brak treści wiadomości</string>
</resources>