<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".reservation.ReservationActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/LinearLayoutReservation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/firstname" />

            <EditText
                android:id="@+id/editTextClientFirstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_firstname"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLength="50"
                android:minHeight="48dp"
                android:textColorHint="#757575" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lastname" />

            <EditText
                android:id="@+id/editTextClientLastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_lastname"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLength="50"
                android:minHeight="48dp"
                android:textColorHint="#757575" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email" />

            <EditText
                android:id="@+id/editTextClientEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:maxLength="50"
                android:minHeight="48dp"
                android:textColorHint="#757575" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone_number" />

            <EditText
                android:id="@+id/editTextClientPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_phone_number"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:minHeight="48dp"
                android:textColorHint="#757575" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/date_time" />

                    <EditText
                        android:id="@+id/editTextTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/select_date_time"
                        android:importantForAutofill="no"
                        android:inputType="none"
                        android:minHeight="48dp"
                        android:textColorHint="#757575" />

                </LinearLayout>

                <Button
                    android:id="@+id/buttonGenerate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/generate_date_time" />
            </LinearLayout>

            <Button
                android:id="@+id/buttonReservation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/book_appointment" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>